# agent

./: .coderabbit.yaml  .env.example  .gitignore  .release-it.json  CITATION.cff  Cargo.toml  Makefile  README.md  databases.json  databases.toml  docker-compose.databases.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  entrypoint.sh  justfile  release
.github/: CONTRIBUTING.md
.github/workflows/: codecov.yml  docker.yml  ghcr.yml  helm.yml  release.yml  windows-release.yml
docker/: Dockerfile
docker/entrypoints/: app-dev-entrypoint.sh
docs/: WINDOWS_BUILD.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  env-configmap.yaml  pvc.yaml
scripts/: README.md
scripts/firebird/: seed.sql
scripts/mongo/: seed-mongo.sh
scripts/mssql/: seed.sql
scripts/mysql/: seed-1gb.sql
scripts/postgres/: seed-1gb.sql
scripts/sqlite/: seed-big.sql  seed.sh  seed.sql
scripts/sqlite/test-db/: app.db
scripts/tests/: requirements.sh
src/: main.rs  settings.rs
src/core/: agent.rs  context.rs  mod.rs
src/domain/: factory.rs  mod.rs  postgres.rs
src/domain/docker_volume/: backup.rs  database.rs  docker.rs  mod.rs  ping.rs  restore.rs
src/domain/firebird/: backup.rs  database.rs  mod.rs  ping.rs  restore.rs
src/services/: backup.rs  config.rs  cron.rs  mod.rs  old_backup.rs  old_restore.rs  restore.rs  status.rs
src/tasks/: ping.rs
src/tests/: mod.rs
src/utils/: common.rs  compress.rs  deserializer.rs  edge_key.rs  file.rs  locks.rs  logging.rs  mod.rs  redis_client.rs  stream.rs  text.rs  tus.rs
(+147 files in other folders)
